src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

:root {
  --ifm-color-primary: #00283d;
  --ifm-color-primary-dark: #002437;
  --ifm-color-primary-darker: #002234;
  --ifm-color-primary-darkest: #001c2b;
  --ifm-color-primary-light: #002c43;
  --ifm-color-primary-lighter: #002e46;
  --ifm-color-primary-lightest: #00344f;
  --ifm-code-font-size: 95%;
  --ifm-background-color: transparent;
  --ifm-link-color: #00AB6B;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

[data-theme='dark'] {
  --ifm-color-primary: #21f190;
  --ifm-color-primary-dark: #0fe883;
  --ifm-color-primary-darker: #0edb7b;
  --ifm-color-primary-darkest: #0bb466;
  --ifm-color-primary-light: #3bf39d;
  --ifm-color-primary-lighter: #48f3a3;
  --ifm-color-primary-lightest: #6ef6b7;
  --ifm-background-color: #00283D !important;
  --ifm-background-surface-color: #00283D !important;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

[data-theme='dark'] #__docusaurus > footer {
  background-color: #00283D;
}

[data-theme='light'] {
  --ifm-color-primary: #00283D;
  --ifm-color-primary-dark: #00AB6B;
  --ifm-color-primary-darker: #00947F;
  --ifm-color-primary-darkest: #007B82;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --ifm-background-color: transparent;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

[data-theme='light'] #__docusaurus > footer {
  background-color: #00283D;
}

[data-theme='light'] .hero__title {
  color: #21f190;
}

main a {
  font-weight: bold;
}

.youtube-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Quotes section */
.container__quotes .card {
  height: 260px;
}

.container__quotes .card__header {
  height: 120px;
}

.container__quotes .card__header .avatar__subtitle {
  color: grey;
}

@media screen and (max-width: 996px) {
  .container__quotes .card {
    height: auto;
  }
  .container__quotes .card__header {
    height: auto;
  }
}

.aspect-ratio-16-9 {
  width: 100%;
  height: auto;
  aspect-ratio: 16/9;
}

